--- a/api/src/main/resources/templates/result.html
+++ b/api/src/main/resources/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>[[${word}]]_bbcow</title>
+    <title>[[${word}]]_木头搜</title>
     <link/>
 </head>
 <body>
@@ -9,12 +9,12 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">bbcow</span>
+                <span class="sr-only">木头搜</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">BBCOW</a>
+            <a class="navbar-brand" href="/">木头搜</a>
         </div>
         <p class="navbar-text navbar-right">@大辉</p>
     </div>
@@ -43,5 +43,6 @@
     </ol>
 </div>
 
+<footer th:replace="footer :: common_footer()"></footer>
 </body>
 </html>
