--- a/api/src/main/resources/templates/header.html
+++ b/api/src/main/resources/templates/header.html
@@ -2,9 +2,10 @@
     <title th:replace="${title}">The awesome application</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="description" content="木头搜，一个网文搜索平台。">
     <!-- Common styles and scripts -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="shortcut icon" th:href="@{/images/favicon.ico}">
+    <link rel="shortcut icon" th:href="@{/bbcow.ico}">
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!--/* Per-page placeholder for additional links */-->
