--- a/api/src/main/resources/templates/result.html
+++ b/api/src/main/resources/templates/result.html
@@ -16,6 +16,9 @@
             </button>
             <a class="navbar-brand" href="/">木头搜</a>
         </div>
+        <p class="navbar-text">
+            <a href="/books/rank/page_score" class="navbar-link">网络热度榜</a>
+        </p>
         <p class="navbar-text navbar-right">@大辉</p>
     </div>
 </nav>
