--- a/api/src/main/resources/templates/books.html
+++ b/api/src/main/resources/templates/books.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>[[ ${book.name} ]]_木头搜</title>
+    <title>[[ ${book.name} ]]_烂白菜</title>
+    <meta name="description" content="[[${word}]]，[[${book.description}]]">
     <link/>
 </head>
 <body>
@@ -9,17 +10,16 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">木头搜</span>
+                <span class="sr-only">烂白菜</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">木头搜</a>
+            <a class="navbar-brand" href="/">烂白菜</a>
         </div>
         <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络热度榜</a>
+            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
         </p>
-        <p class="navbar-text navbar-right">@大辉</p>
     </div>
 </nav>
 <div class="container" style="margin-top: 20px;">
@@ -34,7 +34,7 @@
                 <a th:href="@{/search?word={word}(word=${book.name})}">[[${book.name}]]</a>
                 &nbsp;&nbsp;<small th:text="${book.author}"></small>
             </h4>
-            <p class="lead">热度值：<b>[[${book.page_score / 10.0}]]</b></p>
+            <p class="lead">新鲜度：<b>[[${book.page_score / 10.0}]]</b></p>
             [[${book.description}]]
         </div>
     </div>
@@ -74,7 +74,7 @@
 
   let chart = new Chart({
     parent: "#chart",
-    title: "月热度趋势图",
+    title: "月新鲜度",
     data: data,
     type: 'line',
     height: 250
