--- a/api/src/main/resources/templates/ranks.html
+++ b/api/src/main/resources/templates/ranks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>木头搜，搜书就搜我</title>
+    <title>烂白菜，搜书就搜我</title>
     <link/>
 </head>
 <body>
@@ -9,12 +9,12 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">木头搜</span>
+                <span class="sr-only">烂白菜</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">木头搜</a>
+            <a class="navbar-brand" href="/">烂白菜</a>
         </div>
 
         <p class="navbar-text">
