--- a/api/src/main/resources/templates/result.html
+++ b/api/src/main/resources/templates/result.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>[[${word}]]_木头搜</title>
+    <title>[[${word}]]_烂白菜</title>
+    <meta name="description" content="[[${word}]]">
     <link/>
 </head>
 <body>
@@ -9,17 +10,16 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">木头搜</span>
+                <span class="sr-only">烂白菜</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">木头搜</a>
+            <a class="navbar-brand" href="/">烂白菜</a>
         </div>
         <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络热度榜</a>
+            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
         </p>
-        <p class="navbar-text navbar-right">@大辉</p>
     </div>
 </nav>
 <div class="container">
