--- a/api/src/main/resources/templates/header.html
+++ b/api/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
     <title th:replace="${title}">The awesome application</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="description" content="烂白菜 网络小说 | TXT小说 | 全本小说">
+    <meta name="description" content="烂白菜 - 网络小说 | TXT小说 | 全本小说">
     <!-- Common styles and scripts -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel="shortcut icon" th:href="@{/bbcow.ico}">
