--- a/api/src/main/resources/templates/result.html
+++ b/api/src/main/resources/templates/result.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>[[${word}]]_烂白菜</title>
+    <title>[[${word}]] - 烂白菜</title>
     <meta name="description" content="[[${word}]]">
     <link/>
 </head>
@@ -15,7 +15,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">烂白菜</a>
+            <a class="navbar-brand" href="/" title="烂白菜 - 网络小说 | TXT小说 | 全本小说">烂白菜</a>
         </div>
         <p class="navbar-text">
             <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
