--- a/api/src/main/resources/templates/index.html
+++ b/api/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>烂白菜，搜书就搜我</title>
+    <title>烂白菜 - 网络小说 | TXT小说 | 全本小说</title>
     <link/>
 </head>
 <body>
@@ -14,13 +14,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">烂白菜</a>
+            <a class="navbar-brand" href="/" title="烂白菜 - 网络小说 | TXT小说 | 全本小说">烂白菜</a>
         </div>
 
         <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络热度榜</a>
+            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
         </p>
-        <p class="navbar-text navbar-right">@大辉</p>
     </div>
 </nav>
 <div class="container" style="margin-top: 100px;">
