--- a/api/src/main/resources/templates/ranks.html
+++ b/api/src/main/resources/templates/ranks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>烂白菜，搜书就搜我</title>
+    <title>烂白菜 - 网络小说 | TXT小说 | 全本小说</title>
     <link/>
 </head>
 <body>
@@ -14,13 +14,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">烂白菜</a>
+            <a class="navbar-brand" href="/" title="烂白菜 - 网络小说 | TXT小说 | 全本小说">烂白菜</a>
         </div>
 
         <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络热度榜</a>
+            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
         </p>
-        <p class="navbar-text navbar-right">@大辉</p>
     </div>
 </nav>
 <div class="container" style="margin-top: 20px;">
@@ -28,17 +27,17 @@
     <div class="media" th:each="book: ${books}">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" height="128px" th:src="${book.cp_image_url}" th:alt="${book.name}">
+                <img class="media-object" height="128px" th:src="${book.cpImageUrl}" th:alt="${book.name}">
             </a>
         </div>
         <div class="media-body">
             <h4 class="media-heading">
-                <a th:href="@{/books/{id}?(id=${book.id})}">[[${book.name}]]</a>
+                <a th:href="@{/books/{id}?(id=${book.id})}" title="[[${book.name}]]">[[${book.name}]]</a>
                 &nbsp;&nbsp;<small th:text="${book.author}"></small>
             </h4>
-            <p class="lead">热度值：<b>[[${book.page_score / 10.0}]]</b></p>
+            <p class="lead">新鲜度：<b>[[${book.pageScore / 10.0}]]</b></p>
             [[${book.description}]]
-            <mark th:text="${book.cp_name}"></mark>
+            <mark th:text="${book.cpName}"></mark>
             <mark th:text="${book.tags}"></mark>
         </div>
         <hr/>
