--- a/api/src/main/resources/templates/books.html
+++ b/api/src/main/resources/templates/books.html
@@ -1,61 +1,97 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>[( ${book.name} )] ([( ${book.author} )])- 烂白菜</title>
-    <meta name="description" content="[[${word}]]，[[${book.description}]]">
+<head th:replace="common/head :: default(~{::title},~{::link},~{::meta})">
+    <title>[( ${book.name} )] [( ${book.author} )] [( ${book.name} )]最新评价 - 烂白菜</title>
+    <meta name="description" th:attr="content=${'烂白菜提供'+book.name+'的最新最全评价，是否值得看，口碑如何，以及'+book.author+'新书，答案统统在这里！'}">
+    <meta name="keywords" th:attr="content=${book.name+','+book.name+'最新评价,'+book.author+','+book.author+'的新书'}">
     <link/>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">烂白菜</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/" title="烂白菜">烂白菜</a>
+<header th:replace="common/header :: default()"></header>
+<section class="fdb-block">
+    <div class="container">
+        <div class="row align-items-center pb-xl-5">
+            <div class="col-12 col-md-10 col-xl-10">
+                <h1>[(${book.name})]<small>&nbsp;&nbsp;[(${book.author})]</small></h1>
+                <p class="text-h3">[(${book.description})]</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 m-sm-auto mr-md-0 ml-md-auto pt-4 pt-md-0">
+                <img alt="${book.name}" class="img-fluid" th:src="${book.cpImageUrl}">
+            </div>
         </div>
-        <p class="navbar-text">
-            <a href="/books/rank/page_score" title="网络新鲜榜" class="navbar-link">网络新鲜榜</a>
-        </p>
-    </div>
-</nav>
-<div class="container" style="margin-top: 20px;">
-    <div class="media">
-        <div class="media-left">
-            <a href="#">
-                <img class="media-object" height="128px"  th:src="${book.cpImageUrl}" th:alt="${book.name}">
-            </a>
+        <div class="row pt-1">
+            <div class="col-12 col-sm-6 col-md-3">
+                <h3><strong style="color:red">[[${book.pageScore / 10.0}]]</strong>分</h3>
+                <p>AI新鲜度</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <h3><strong style="color:red">[[${book.pageCount}]]</strong>条</h3>
+                <p>网站收录数</p>
+            </div>
         </div>
-        <div class="media-body">
-            <h4 class="media-heading">
-                <a th:href="@{/search?word={word}(word=${book.name})}" th:title="${book.name}">[[${book.name}]]</a>
-                &nbsp;&nbsp;<small th:text="${book.author}"></small>
-            </h4>
-            <p class="lead">新鲜度：<b>[[${book.pageScore / 10.0}]]</b></p>
-            [[${book.description}]]
+        <div class="row" id="chart"></div>
+        <h2>相关故事人物</h2>
+        <div class="row pt-3">
+            <p class="col-12 col-sm-6 col-md-2 text-center" th:each="p : ${person}">[(${p.word})]</p>
         </div>
     </div>
-    <hr/>
-    <div id="chart"></div>
-    <p>来源：[[${book.cpName}]]</p>
-    <p>标签：[[${book.tags}]]</p>
-    <p>签约：[[${book.isSign == 1} ? '已签约' : '未签约']]</p>
-    <p>状态：[[${book.isFinish == 1} ? '完结' : '连载']]</p>
-    <p>收费：[[${book.isVip == 1} ? '收费' : '免费']]</p>
-    <p>源链接：[[${book.cpUrl}]]</p>
-    <hr/>
-    <p class="lead">同名推荐</p>
-    <ol>
-        <li th:each="book : ${recommendBooks}">
-            <p><a th:href="@{/search?word={word}(word=${book.name})}">[[${book.name}]]&nbsp;&nbsp;</a><small>新鲜度：[[${book.pageScore / 10.0}]]</small></p>
-        </li>
-    </ol>
-</div>
-<footer th:replace="footer :: common_footer()"></footer>
-<script src="/js/frappe-charts.min.iife.js" ></script>x
+</section>
+<section class="fdb-block" style="background-image: url(/imgs/bg_1.svg)">
+    <div class="container">
+        <div class="row align-items-top">
+            <div class="col-12 col-md-6 col-xl-4 m-auto">
+                <h2>[[${book.cpName}]]</h2>
+                <p>源链接：[[${book.cpUrl}]]</p>
+            </div>
+
+            <div class="col-12 col-md-6 pt-3 pt-md-0">
+                <div class="row justify-content-left">
+                    <div class="col-3 m-auto text-center" th:each="tag : ${book.tags}">
+                        <p><a href="#">[(${tag})]</a></p>
+                    </div>
+                    <div class="col-3 m-auto text-center">
+                        <p><a href="#">[[${book.cpName}]]</a></p>
+                    </div>
+                    <div class="col-3 m-auto text-center">
+                        <p><a href="#">[[${book.isSign == 1} ? '已签约' : '未签约']]</a></p>
+                    </div>
+                    <div class="col-3 m-auto text-center">
+                        <p><a href="#">[[${book.isFinish == 1} ? '完结' : '连载']]</a></p>
+                    </div>
+                    <div class="col-3 m-auto text-center">
+                        <p><a href="#">[[${book.isVip == 1} ? '收费' : '免费']]</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="fdb-block">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12">
+                <h1>同作者推荐</h1>
+            </div>
+        </div>
+        <div class="row text-left mt-5">
+            <div class="col-12 col-md-4"  th:each="book : ${recommendBooks}">
+                <div class="row">
+                    <div class="col-3">
+                        <a th:href="@{/books/{id}(id=${book.id})}" th:title="${book.name}">
+                            <img alt="${book.name}" class="img-fluid" th:src="${book.cpImageUrl}">
+                        </a>
+                    </div>
+                    <div class="col-9">
+                        <h3><a th:href="@{/books/{id}(id=${book.id})}" th:title="${book.name}"><strong>[(${book.name})]</strong></a></h3>
+                        <p>[(${book.pageScore / 10.0})]</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer th:replace="common/footer :: default()"></footer>
+<script src="/js/frappe-charts.min.iife.js" ></script>
 <script>
   var labels = ['[(${#strings.arrayJoin(labels, "','")})]'];
   var values = [ [(${#strings.arrayJoin(values, ",")})] ];
@@ -74,10 +110,10 @@
 
   let chart = new Chart({
     parent: "#chart",
-    title: "月新鲜度",
+    title: "AI新鲜史",
     data: data,
     type: 'line',
-    height: 250
+    height: 200
   });
 
   chart.show_averages();
