--- a/api/src/main/resources/templates/index.html
+++ b/api/src/main/resources/templates/index.html
@@ -1,56 +1,41 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>烂白菜 - 网络小说 | TXT小说 | 全本小说</title>
+<head th:replace="common/head :: default(~{::title},~{::link},~{::meta})">
+    <title>烂白菜 - 网络小说 | TXT小说 | 全本小说 | 元尊</title>
+    <meta name="description" content="烂白菜，网文世界风向标，告诉你关于网文的一切。">
+    <meta name="keywords" content="烂白菜,白菜,大白菜,网文,网文大全,玄幻排行榜,都市排行榜,总裁排行榜,小说排行榜">
     <link/>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">烂白菜</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/" title="烂白菜 - 网络小说 | TXT小说 | 全本小说">烂白菜</a>
+<header th:replace="common/header :: default()"></header>
+<section class="fdb-block">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6 text-center">
+                <h1>烂白菜</h1>
+                <form action="/search" method="post" class="">
+                    <div class="input-group mt-4 mb-4">
+                        <input type="text" class="form-control" name="word" placeholder="书名 作者名" th:value="${word}">
+                        <span class="input-group-btn">
+                        <button class="btn" type="submit">扒一下</button>
+                    </span>
+                    </div>
+                </form>
+                <!--<p class="text-h4">Find us on <a href="https://www.froala.com">Facebook</a> and <a href="https://www.froala.com">Twitter</a>.</p>-->
+            </div>
         </div>
-
-        <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
-        </p>
     </div>
-</nav>
-<div class="container" style="margin-top: 100px;">
-    <form action="/search" method="post" class="">
-        <div class="col-lg-12">
-            <div class="input-group input-group-lg">
-                <span class="input-group-addon" id="basic-addon3">烂白菜</span>
-                <input type="text" class="form-control" name="word" placeholder="书名 作者名" th:value="${word}"/>
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="submit">搜......</button>
-                </span>
-            </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-    </form>
-</div>
-<div class="container" style="margin-top: 20px;">
-    <label class="col-md-2" th:each="word:${words}">
-        <a th:href="@{/search?word={word}(word=${word.word})}" th:text="${word.word}"></a>
-    </label>
-</div>
-<!--<div class="container" style="margin-top: 20px;">-->
-    <!--<ol class="">-->
-        <!--<li th:each="result: ${results}" class="col-md-12"  style="padding-bottom: 10px">-->
-            <!--<label class="col-md-3"><a th:href="@{/books/{id}(id=${result.fields.id})}" th:utext="${result.fields.name}"></a></label>-->
-            <!--<label th:text ="${result.fields.author}" class="col-md-3"></label>-->
-            <!--<label th:text ="${result.fields.cp}" class="col-md-3"></label>-->
-            <!--<label th:text ="${result.fields.tags}" class="col-md-3"></label>-->
-        <!--</li>-->
+</section>
+<section class="fdb-block">
+    <div class="container">
+        <div class="row justify-content-center">
+            <label class="col-md-2" th:each="word:${words}">
+                <a th:href="@{/search?word={word}(word=${word.word})}" th:text="${word.word}"></a>
+            </label>
+        </div>
+    </div>
+</section>
 
-    <!--</ol>-->
-<!--</div>-->
-<footer th:replace="footer :: common_footer()"></footer>
+<footer th:replace="common/footer :: default()"></footer>
 </body>
 </html>
