--- a/api/src/main/resources/templates/ranks.html
+++ b/api/src/main/resources/templates/ranks.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="header :: common_header(~{::title},~{::link})">
-    <title>烂白菜 - 网络小说 | TXT小说 | 全本小说</title>
+<head th:replace="common/head :: default(~{::title},~{::link},~{::meta})">
+    <title>AI榜 | 玄幻排行榜 | 都市排行榜 | 总裁排行榜 - 烂白菜 </title>
+    <meta name="description" content="AI榜，一个机器智能排序榜单，每日由机器智能自动打分排序，无人工影响。">
+    <meta name="keywords" content="AI榜,玄幻排行榜,都市排行榜,总裁排行榜,小说排行榜">
     <link/>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">烂白菜</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/" title="烂白菜 - 网络小说 | TXT小说 | 全本小说">烂白菜</a>
+<header th:replace="common/header :: default()"></header>
+<section class="fdb-block">
+    <div class="container"><h1>AI榜，一个机器智能排序榜单。</h1></div>
+    <div class="container" th:each="book,bookStat: ${books}">
+        <div class="row align-items-center pb-xl-5">
+            <div class="col-12 col-md-10 col-xl-10">
+                <h2>[[${bookStat.index+1}]].  [(${book.name})]&nbsp;&nbsp;<small>[(${book.author})]</small></h2>
+                <p class="text-h3">[(${book.description})]</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 m-sm-auto mr-md-0 ml-md-auto pt-4 pt-md-0">
+                <img alt="${book.name}" class="img-fluid" th:src="${book.cpImageUrl}">
+            </div>
         </div>
-
-        <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
-        </p>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-3">
+                <h3><strong style="color:red">[[${book.pageScore / 10.0}]]</strong>分</h3>
+                <p>AI新鲜度</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <h3><strong style="color:red">[[${book.pageCount}]]</strong>条</h3>
+                <p>网站收录数</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <a th:href="@{/books/{id}(id=${book.id})}" th:title="${book.name}">查看详情</a>
+            </div>
+        </div>
     </div>
-</nav>
-<div class="container" style="margin-top: 20px;">
-<h2>网络热度榜 TOP50</h2>
-    <div class="media" th:each="book: ${books}">
-        <div class="media-left">
-            <a href="#">
-                <img class="media-object" height="128px" th:src="${book.cpImageUrl}" th:alt="${book.name}">
-            </a>
-        </div>
-        <div class="media-body">
-            <h4 class="media-heading">
-                <a th:href="@{/books/{id}?(id=${book.id})}" title="[[${book.name}]]">[[${book.name}]]</a>
-                &nbsp;&nbsp;<small th:text="${book.author}"></small>
-            </h4>
-            <p class="lead">新鲜度：<b>[[${book.pageScore / 10.0}]]</b></p>
-            [[${book.description}]]
-            <mark th:text="${book.cpName}"></mark>
-            <mark th:text="${book.tags}"></mark>
-        </div>
-        <hr/>
-    </div>
-</div>
-<footer th:replace="footer :: common_footer()"></footer>
+</section>
+<footer th:replace="common/footer :: default()"></footer>
 </body>
 </html>
