--- a/api/src/main/resources/templates/result.html
+++ b/api/src/main/resources/templates/result.html
@@ -1,51 +1,41 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="header :: common_header(~{::title},~{::link})">
+<head th:replace="common/head :: default(~{::title},~{::link},~{::meta})">
     <title>[[${word}]] - 烂白菜</title>
-    <meta name="description" content="[[${word}]]">
+    <meta name="description" th:attr="content=${word+'的小说'}">
+    <meta name="keywords" th:attr="content=${word+','+word+'相关小说,'+word+'的评论'}">
     <link/>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">烂白菜</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/" title="烂白菜 - 网络小说 | TXT小说 | 全本小说">烂白菜</a>
-        </div>
-        <p class="navbar-text">
-            <a href="/books/rank/page_score" class="navbar-link">网络新鲜榜</a>
-        </p>
-    </div>
-</nav>
-<div class="container">
-    <form action="/search" method="post" class="">
-        <div class="col-lg-12">
-            <div class="input-group input-group-lg">
-                <input type="text" class="form-control" name="word" placeholder="书名 作者名" th:value="${word}"/>
+<header th:replace="common/header :: default()"></header>
+<section class="fdb-block">
+    <div class="container">
+        <form action="/search" method="post" class="">
+            <div class="input-group mt-4 mb-4">
+                <input type="text" class="form-control" name="word" placeholder="书名 作者名" th:value="${word}">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="submit">搜......</button>
+                    <button class="btn" type="submit">扒一下</button>
                 </span>
-            </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-    </form>
-</div>
-<div class="container" style="margin-top: 20px;">
-    <ol class="">
-        <li th:each="result: ${results}" class="col-md-12"  style="padding-bottom: 10px">
-            <label class="col-md-3"><a th:href="@{/books/{id}(id=${result.fields.id})}" th:utext="${result.fields.name}"></a></label>
-            <label th:text ="${result.fields.author}" class="col-md-3"></label>
-            <label th:text ="${result.fields.cp}" class="col-md-3"></label>
-            <label th:text ="${result.fields.tags}" class="col-md-3"></label>
-        </li>
+            </div>
+        </form>
+        <ol>
+            <li th:each="result: ${results}" class="row text-left align-items-center">
+                <div class="col-12 col-lg-8 pt-4 pt-lg-0">
+                    <h3>
+                        <a th:href="@{/books/{id}(id=${result.fields.id})}">[(${result.fields.name})]</a>
+                        <small>作者：[(${result.fields.author})]</small>
+                    </h3>
 
-    </ol>
-</div>
+                </div>
+                <div class="col-10 col-sm-12 m-auto m-lg-0 col-lg-4">
+                    <p class="text-h4">来源：[(${result.fields.cp})]</p>
+                    <p class="text-h4">标签：[(${result.fields.tags})]</p>
+                </div>
+            </li>
+        </ol>
 
-<footer th:replace="footer :: common_footer()"></footer>
+    </div>
+</section>
+<footer th:replace="common/footer :: default()"></footer>
 </body>
 </html>
