--- a/api/src/main/resources/templates/common/header.html
+++ b/api/src/main/resources/templates/common/header.html
@@ -20,6 +20,9 @@
                         <a class="nav-link" href="/books/rank/page_score" title="AI榜">AI榜</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/books/stores" title="AI榜">书库</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/site" title="CP接入">CP站接入</a>
                     </li>
                 </ul>
