--- a/api/src/main/resources/templates/common/header.html
+++ b/api/src/main/resources/templates/common/header.html
@@ -17,13 +17,13 @@
                         <!--<a class="nav-link" href="/">首页<span class="sr-only">(current)</span></a>-->
                     <!--</li>-->
                     <li class="nav-item">
-                        <a class="nav-link" href="/books/rank/page_score" title="AI榜">AI榜</a>
+                        <a class="nav-link" href="/books/rank/page_score" title="白菜榜">白菜榜</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/books/stores" title="AI榜">书库</a>
+                        <a class="nav-link" href="/books/stores" title="白菜地">白菜地</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/site" title="CP接入">CP站接入</a>
+                        <a class="nav-link" href="/site" title="CP合作">CP合作</a>
                     </li>
                 </ul>
             </div>
