--- a/api/src/main/resources/templates/common/head.html
+++ b/api/src/main/resources/templates/common/head.html
@@ -1,9 +1,15 @@
 <head th:fragment="default(title,links,meta)">
-    <title th:replace="${title}">The awesome application</title>
+    <title>[(${bbcow_t})]</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
-    <th:block th:replace="${meta}" />
+
+    <meta name="applicable-device" content="pc,mobile">
+    <meta name="description" th:attr="content=${bbcow_d}">
+    <meta name="keywords" th:attr="content=${bbcow_k}">
+    <meta http-equiv="mobile-agent" th:attr="content=${'format=html5; url=http://m.bbcow.com'+bbcow_mu}" />
+    <meta name="mobile-agent" th:attr="content=${'format=html5; url=http://m.bbcow.com'+bbcow_mu}" />
+    <!--<th:block th:replace="${meta}" />-->
     <!-- Common styles and scripts -->
     <link rel="shortcut icon" th:href="@{/favicon.ico}">
 
@@ -14,5 +20,6 @@
     <link type="text/css" rel="stylesheet" href="/css/froala_blocks.css">
 
     <!--/* Per-page placeholder for additional links */-->
-    <th:block th:replace="${links}" />
+
+    <link th:replace="${links}" />
 </head>
