--- a/api/src/main/resources/templates/common/footer.html
+++ b/api/src/main/resources/templates/common/footer.html
@@ -5,7 +5,7 @@
                 <h3><strong>链接</strong></h3>
                 <nav class="nav flex-column">
                     <a class="nav-link" href="/">首页</a>
-                    <a class="nav-link" href="/books/rank/page_score">AI榜</a>
+                    <a class="nav-link" href="/books/rank/page_score">白菜榜</a>
                     <a class="nav-link" href="#">MAIL : adan@bbcow.com</a>
                 </nav>
             </div>
@@ -29,9 +29,58 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+
+    <script type="text/javascript">
+        var userBarData = {visitor: true, loginName: null, userUrl: null, logoutUrl: null};
+        var userBar = new Vue({
+            el: '#userBar',
+            data: userBarData,
+            methods: {
+                logout: function(event){
+                    localStorage.removeItem("name");
+                    localStorage.removeItem("token");
+
+                    userBarData.visitor = true;
+                    userBarData.loginName = null;
+                    userBarData.userUrl = null;
+                    userBarData.logoutUrl = null;
+                    console.log('logout');
+                }
+
+            }
+        });
+        var serverToken = '[(${token == null ? undefined : token})]';
+        var serverName = '[(${name == null ? undefined : name})]';
+
+        if(serverToken != undefined && serverToken != null && serverToken != ''){
+            localStorage.setItem('token', serverToken);
+            localStorage.setItem('name', serverName);
+        }
+
+        var token = localStorage.getItem('token');
+        var name = localStorage.getItem('name');
+        if(token != undefined && token != null){
+            userBarData.visitor = false;
+            userBarData.loginName = name;
+            userBarData.userUrl = "/user?token="+token;
+            userBarData.logoutUrl = "/user/logout?token="+token;
+
+            console.log("1");
+        }else {
+            userBarData.visitor = true;
+            userBarData.loginName = null;
+            userBarData.userUrl = null;
+            userBarData.logoutUrl = null;
+
+            console.log("2");
+        }
+
+    </script>
     <script>
 var _hmt = _hmt || [];
 (function() {
