--- a/api/src/main/resources/templates/common/header.html
+++ b/api/src/main/resources/templates/common/header.html
@@ -13,11 +13,11 @@
 
             <div class="collapse navbar-collapse justify-content-center col-md-8 navbar-collapse-3">
                 <ul class="navbar-nav justify-content-center">
-                    <!--<li class="nav-item active">-->
-                        <!--<a class="nav-link" href="/">首页<span class="sr-only">(current)</span></a>-->
-                    <!--</li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="/books/rank/page_score" title="白菜榜">白菜榜</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/books/rank/7kg" title="7KG榜">7KG榜</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/books/stores" title="白菜地">白菜地</a>
@@ -29,9 +29,20 @@
             </div>
 
             <div class="collapse navbar-collapse justify-content-end col-md-2 navbar-collapse-3">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">登录 →</a>
+                <ul class="navbar-nav" id="userBar">
+                    <li v-if="visitor" class="nav-item">
+                        <a class="nav-link" rel="nofollow" href="/register.html">注册</a>
+                    </li>
+                    <li v-if="visitor"  class="nav-item">
+                        <a class="nav-link" rel="nofollow" href="/login.html">登录 →</a>
+                    </li>
+                    <li v-if="!visitor" class="nav-item">
+                        <a class="nav-link" v-bind:href="userUrl" rel="nofollow" id="loginName">
+                            {{ loginName }}
+                        </a>
+                    </li>
+                    <li v-if="!visitor" class="nav-item">
+                        <a class="nav-link" v-on:click="logout" rel="nofollow" title="注销">注销</a>
                     </li>
                 </ul>
             </div>
