添加百度熊掌号

--- a/api/src/main/resources/templates/common/head.html
+++ b/api/src/main/resources/templates/common/head.html
@@ -22,4 +22,5 @@
     <!--/* Per-page placeholder for additional links */-->
 
     <link th:replace="${links}" />
+    <script src="//msite.baidu.com/sdk/c.js?appid=1584272942248118"></script>
 </head>
