网页优化 章节添加排序

--- a/api/src/main/resources/templates/books.html
+++ b/api/src/main/resources/templates/books.html
@@ -28,10 +28,6 @@
             </div>
         </div>
         <div class="row" id="chart"></div>
-        <h2>相关故事人物</h2>
-        <div class="row pt-3">
-            <p class="col-12 col-sm-6 col-md-2 text-center" th:each="p : ${person}">[(${p.word})]</p>
-        </div>
     </div>
 </section>
 <section class="fdb-block" style="background-image: url(/imgs/bg_1.svg)">
@@ -41,7 +37,6 @@
                 <h2>[[${book.cpName}]]</h2>
                 <p>源链接：[[${book.cpUrl}]]</p>
             </div>
-
             <div class="col-12 col-md-6 pt-3 pt-md-0">
                 <div class="row justify-content-left">
                     <div class="col-3 m-auto text-center" th:each="tag : ${book.tags}">
@@ -64,18 +59,31 @@
         </div>
     </div>
 </section>
-
 <section class="fdb-block">
     <div class="container">
         <div class="row text-center">
             <div class="col-12">
-                <h3>来源</h3>
+                <h3>源链接</h3>
             </div>
         </div>
         <div class="row text-left mt-2">
             <ol>
-                <li th:each="url : ${urls}"><a th:href="@{/books/chapters/{rk}?url={url}(rk=${book.referenceKey}, url=${url.encodeUrl})}" target="_blank">[(${url.url})]</a></li>
+                <li th:each="url : ${urls}">[(${url.url})]<a th:href="@{/books/chapters/{rk}?url={url}(rk=${book.referenceKey}, url=${url.encodeUrl})}" target="_blank">(查看目录)</a></li>
             </ol>
+        </div>
+    </div>
+</section>
+<section class="fdb-block">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12">
+                <h3>相关故事人物</h3>
+            </div>
+        </div>
+        <div class="row text-left mt-2">
+            <div class="row pt-1">
+                <p class="col-12 col-sm-6 col-md-2 text-center" th:each="p : ${person}">[(${p.word})]</p>
+            </div>
         </div>
     </div>
 </section>
@@ -86,7 +94,7 @@
                 <h3>同作者推荐</h3>
             </div>
         </div>
-        <div class="row text-left mt-3">
+        <div class="row text-left mt-2">
             <div class="col-12 col-md-4 pt-3"  th:each="book : ${recommendBooks}">
                 <div class="row">
                     <div class="col-3">
