--- a/api/src/main/resources/templates/common/footer.html
+++ b/api/src/main/resources/templates/common/footer.html
@@ -6,13 +6,14 @@
                 <nav class="nav flex-column">
                     <a class="nav-link" href="/">首页</a>
                     <a class="nav-link" href="/books/rank/page_score">白菜榜</a>
-                    <a class="nav-link" href="#">MAIL : adan@bbcow.com</a>
                 </nav>
             </div>
 
             <div class="col-12 col-md-4 col-lg-3 text-md-left mt-5 mt-md-0">
                 <h3><strong>关于我们</strong></h3>
-                <p>本站所有资源均来自于网络，如有侵权，请及时联系我们，我们将会在24小时内处理完成。</p>
+                <p>本站所有资源均来自于网络，如有侵权，请及时联系我们，我们将会在24小时内处理完成。
+                    <a class="nav-link" href="#">MAIL : adan@bbcow.com</a>
+                </p>
             </div>
 
             <div class="col-12 col-lg-2 ml-auto text-lg-left mt-4 mt-lg-0">
