替换为谷歌分析

--- a/api/src/main/resources/templates/common/footer.html
+++ b/api/src/main/resources/templates/common/footer.html
@@ -82,13 +82,13 @@
         }
 
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110817794-1"></script>
     <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?fea9b200372b7541e21002ee519023a3";
-  var s = document.getElementsByTagName("script")[0];
-  s.parentNode.insertBefore(hm, s);
-})();
-    </script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110817794-1');
+</script>
 </footer>
