--- a/api/src/main/resources/templates/common/header.html
+++ b/api/src/main/resources/templates/common/header.html
@@ -3,7 +3,7 @@
         <nav class="navbar navbar-expand-md no-gutters">
             <div class="col-2 text-left">
                 <a href="/">
-                    <img src="/imgs/logo.svg" height="30" alt="image">
+                    <img src="/imgs/logo.svg" height="30" alt="烂白菜_有态度,有节操-中国网络小说风向标">
                 </a>
             </div>
 
@@ -14,17 +14,20 @@
             <div class="collapse navbar-collapse justify-content-center col-md-8 navbar-collapse-3">
                 <ul class="navbar-nav justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="/books/rank/page_score" title="白菜榜">白菜榜</a>
+                        <a class="nav-link" href="/books/rank/page_score" title="2017白菜榜">白菜榜</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/books/rank/7kg" title="7KG榜">7KG榜</a>
+                        <a class="nav-link" href="/books/rank/finish" title="2017完结榜">完结榜</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/books/rank/7kg" title="2107 7KG榜">7KG榜</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/books/stores" title="白菜地">白菜地</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/site" title="CP合作">CP合作</a>
-                    </li>
+                    <!--<li class="nav-item">-->
+                        <!--<a class="nav-link" href="/site" title="CP合作">CP合作</a>-->
+                    <!--</li>-->
                 </ul>
             </div>
 
